...
    <string name="title_delete_patient">Delete Patient</string>
    <string name="title_settings">Settings</string>
    <string name="title_recover_password">Recover Password</string>

    <!-- Game titles -->
    <string name="title_motor_skills">Motor Skills</string>
    <string name="title_reaction_time">Reaction Time</string>
    <string name="title_visual_short_term_memory">Short Term Visual Memory</string>
    <string name="title_visual_attention">Visual Attention</string>

    <!-- Create patient fragment strings -->
    <string name="patient_id_title">Patient ID</string>
    <string name="enter_unique_id">Enter a unique ID</string>
...
    <string name="delete_patient_delete_text">Delete Patients</string>
    <string name="delete_patient_confirmation_dialog">You are about to delete %1$s patients and all data associated with them.\nThis action cannot be undone.\nDo you wish to continue?</string>
    <string name="delete_patient_confirmation_dialog_1_selected">You are about to delete 1 patient and all data associated with them.\nThis action cannot be undone.\nDo you wish to continue?</string>
    <string name="delete_patient_no_patients_selected">No patients selected</string>

    <!--Generic Game Related strings-->
    <string name="start_game">Start Game</string>
    <string name="next_round">Next Round</string>
    <string name="attempts_none">No attempts remaining</string>
    <string name="textview_attempts_plural">%1$s attempts remaining</string>
    <string name="textview_attempts_singular">%1$s attempt remaining</string>
    <string name="play_again">Play Again</string>
    <string name="exit">Exit Game</string>
...
    <!--Generic Strings-->
    <string name="disclaimer">Disclaimer</string>
    <string name="disclaimer_body">"In regards to this app\nNeurolab by Soteria is designed as an assistant tool only. It should not be relied upon for treatment, diagnosis\n or professional medical advice. If you have any queries about its use,\nplease consult your local physician or health care provider.
        \nIn regards to personal data\nSoteria do not store any personal data you enter on external hardware, \ninformation gathered by this app will stay on the device installed. Your information, \nand control over it, is accessible only to you or your healthcare provider.
        \nYour Responsibilities\nYou must not store any information that could be considered confidential information \non this application for the purposes of identifying a patient registered on this device. Information includes but is not limited to a patient's name, age, address, phone number or birthday.
        \nBy continuing to the app, you confirm that you have read, understood and accept the above statement."</string>
    <string name="shared_preferences_filename">neurolabPrefs</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="logout">Logout</string>
    
    <!-- Select Game Screen -->
    <string name="select_game">Select Game</string>

    <!-- Tutorial Activity -->
    <string name="game_instructions">Game Instructions</string>
    <string name="video_demonstration">Video Demonstration</string>

</resources>

