<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tutorial_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/margin_large"
    tools:context=".TutorialActivity"
    android:gravity="center">

    <TextView
        android:id="@+id/tutorial_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginBottom="@dimen/margin_medium"
        android:text="@string/game_instructions"
        style="@style/TextSubHead" />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginBottom="@dimen/margin_medium">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/border_grey"
            android:requiresFadingEdge="vertical"
            android:fadingEdgeLength="128dp">

            <TextView
                android:id="@+id/tutorial_description"
                style="@style/TextBody"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextSecondary"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_marginEnd="@dimen/margin_medium"/>
        </ScrollView>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginBottom="@dimen/margin_large"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/video_header"
            style="@style/TextBody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_small"
            android:text="@string/video_demonstration" />

        <VideoView
            android:id="@+id/video_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/border_black_thick"
            android:clickable="true"
            android:focusable="true" />
    </LinearLayout>


    <Button
        android:id="@+id/tutorial_start_button"
        style="@style/TextButtonBlue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="56dp"
        android:onClick="startGame"
        android:text="@string/start_game" />

</LinearLayout>